--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "bin": "./bin/c8.js",
   "scripts": {
-    "test": "nyc mocha test.js"
+    "test": "nyc mocha test.js",
+    "release": "standard-version"
   },
   "keywords": [
     "coverage",
@@ -26,5 +27,8 @@
     "get-port": "^3.2.0",
     "spawn-wrap": "^1.3.8",
     "yargs": "^10.0.3"
+  },
+  "devDependencies": {
+    "standard-version": "^4.2.0"
   }
 }
