--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chrome-remote-interface": "^0.25.2",
     "foreground-child": "^1.5.6",
     "get-port": "^3.2.0",
-    "spawn-wrap": "^1.3.8",
+    "spawn-wrap": "=1.3.8",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
