docs: update notes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "c8",
   "version": "1.0.1",
-  "description": "collect test coverage using v8's profiler",
+  "description": "collect test coverage using v8's inspector",
   "main": "index.js",
   "bin": "./bin/c8.js",
   "scripts": {
