--- a/package.json
+++ b/package.json
@@ -5,8 +5,19 @@
   "main": "index.js",
   "bin": "./bin/c8.js",
   "scripts": {
-    "test": "nyc mocha test.js",
+    "test": "./bin/c8.js node ./node_modules/.bin/_mocha ./test/*.js",
+    "posttest": "standard",
     "release": "standard-version"
+  },
+  "c8": {
+    "exclude": [
+      "test/*.js"
+    ]
+  },
+  "standard": {
+    "ignore": [
+      "test/fixtures"
+    ]
   },
   "keywords": [
     "coverage",
@@ -23,9 +34,22 @@
   "license": "ISC",
   "dependencies": {
     "chrome-remote-interface": "^0.25.2",
-    "yargs": "^10.0.3"
+    "find-up": "^2.1.0",
+    "istanbul-lib-coverage": "^1.1.1",
+    "istanbul-lib-report": "^1.1.2",
+    "istanbul-reports": "^1.1.3",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2",
+    "test-exclude": "^4.1.1",
+    "uuid": "^3.1.0",
+    "v8-to-istanbul": "^1.2.0",
+    "yargs": "^10.0.3",
+    "yargs-parser": "^8.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "standard": "^10.0.3",
     "standard-version": "^4.2.0"
   }
 }
