--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "bin": "./bin/c8.js",
   "scripts": {
-    "test": "./bin/c8.js node ./node_modules/.bin/_mocha ./test/*.js",
+    "bundle": "bundle-dependencies update",
+    "test": "nyc mocha ./test/*.js",
     "posttest": "standard",
     "release": "standard-version"
   },
@@ -33,13 +34,15 @@
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "dependencies": {
-    "chrome-remote-interface": "^0.25.2",
     "find-up": "^2.1.0",
+    "foreground-child": "^1.5.6",
     "istanbul-lib-coverage": "^1.1.1",
     "istanbul-lib-report": "^1.1.2",
     "istanbul-reports": "^1.1.3",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
+    "signal-exit": "^3.0.2",
+    "spawn-wrap": "^1.4.2",
     "test-exclude": "^4.1.1",
     "uuid": "^3.1.0",
     "v8-to-istanbul": "^1.2.0",
@@ -47,9 +50,27 @@
     "yargs-parser": "^8.0.0"
   },
   "devDependencies": {
+    "bundle-dependencies": "^1.0.2",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
+    "nyc": "^11.4.1",
     "standard": "^10.0.3",
     "standard-version": "^4.2.0"
-  }
+  },
+  "bundledDependencies": [
+    "find-up",
+    "foreground-child",
+    "istanbul-lib-coverage",
+    "istanbul-lib-report",
+    "istanbul-reports",
+    "mkdirp",
+    "rimraf",
+    "signal-exit",
+    "spawn-wrap",
+    "test-exclude",
+    "uuid",
+    "v8-to-istanbul",
+    "yargs",
+    "yargs-parser"
+  ]
 }
