--- a/package.json
+++ b/package.json
@@ -5,15 +5,9 @@
   "main": "index.js",
   "bin": "./bin/c8.js",
   "scripts": {
-    "bundle": "bundle-dependencies update",
-    "test": "nyc mocha ./test/*.js",
+    "test": "./bin/c8.js --reporter=html --reporter=text mocha ./test/*.js",
     "posttest": "standard",
     "release": "standard-version"
-  },
-  "c8": {
-    "exclude": [
-      "test/*.js"
-    ]
   },
   "standard": {
     "ignore": [
@@ -28,49 +22,35 @@
     "profiler",
     "inspector"
   ],
-  "engines": {
-    "node": ">=8.8.1"
-  },
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "dependencies": {
-    "find-up": "^2.1.0",
+    "find-up": "^3.0.0",
     "foreground-child": "^1.5.6",
-    "istanbul-lib-coverage": "^1.1.1",
-    "istanbul-lib-report": "^1.1.2",
-    "istanbul-reports": "^1.1.3",
+    "istanbul-lib-coverage": "^2.0.1",
+    "istanbul-lib-report": "^2.0.1",
+    "istanbul-reports": "^2.0.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
-    "signal-exit": "^3.0.2",
-    "spawn-wrap": "^1.4.2",
-    "test-exclude": "^4.1.1",
-    "uuid": "^3.1.0",
+    "test-exclude": "^5.0.0",
+    "uuid": "^3.3.2",
+    "v8-coverage-merge": "^1.1.2",
     "v8-to-istanbul": "^1.2.0",
-    "yargs": "^10.0.3",
-    "yargs-parser": "^8.0.0"
+    "yargs": "^12.0.2",
+    "yargs-parser": "^10.1.0"
   },
   "devDependencies": {
-    "bundle-dependencies": "^1.0.2",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "nyc": "^11.4.1",
-    "standard": "^10.0.3",
-    "standard-version": "^4.2.0"
+    "mocha": "^5.2.0",
+    "standard": "^12.0.1",
+    "standard-version": "^4.4.0"
   },
-  "bundledDependencies": [
-    "find-up",
-    "foreground-child",
-    "istanbul-lib-coverage",
-    "istanbul-lib-report",
-    "istanbul-reports",
-    "mkdirp",
-    "rimraf",
-    "signal-exit",
-    "spawn-wrap",
-    "test-exclude",
-    "uuid",
-    "v8-to-istanbul",
-    "yargs",
-    "yargs-parser"
+  "engines": {
+    "node": ">=10.10.0"
+  },
+  "files": [
+    "lib",
+    "bin",
+    "LICENSE"
   ]
 }
