--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "./bin/c8.js --reporter=html --reporter=text mocha ./test/*.js",
     "posttest": "standard",
+    "coverage": "./bin/c8.js report --reporter=text-lcov | coveralls",
     "release": "standard-version"
   },
   "standard": {
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
     "standard": "^12.0.1",
     "standard-version": "^4.4.0"
