--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "test": "node ./bin/c8.js --reporter=html --reporter=text mocha ./test/*.js",
+    "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "posttest": "standard",
     "coverage": "./bin/c8.js report --reporter=text-lcov | coveralls",
     "release": "standard-version"
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-jest-snapshot": "^2.0.0",
     "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
     "standard": "^12.0.1",
