--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "dependencies": {
+    "@c88/v8-coverage": "^0.1.0",
     "find-up": "^3.0.0",
     "foreground-child": "^1.5.6",
     "istanbul-lib-coverage": "^2.0.1",
@@ -40,7 +41,6 @@
     "rimraf": "^2.6.2",
     "test-exclude": "^5.0.0",
     "uuid": "^3.3.2",
-    "v8-coverage-merge": "^1.1.2",
     "v8-to-istanbul": "^1.2.0",
     "yargs": "^12.0.2",
     "yargs-parser": "^10.1.0"
