fix: file URL to system path conversion (#46)
This commit fixes the conversion from `file://` urls to system-dependent paths. It ensures that it works on Windows and with special characters.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@c88/v8-coverage": "^0.1.0",
     "find-up": "^3.0.0",
     "foreground-child": "^1.5.6",
+    "furi": "^1.0.0",
     "istanbul-lib-coverage": "^2.0.1",
     "istanbul-lib-report": "^2.0.1",
     "istanbul-reports": "^2.0.0",
