fix: float patch for branch/function coverage merge bug (#56)
see: https://github.com/demurgos/v8-coverage/issues/2

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
+os:
+  - linux
+  - osx
+  # need to figure out why offsets
+  # are slightly off on Windows.
+  # - windows
 node_js:
-  - "10.10"
+  - "11"
 after_success: npm run coverage
