--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
   "author": "Ben Coe <ben@npmjs.com>",
   "license": "ISC",
   "dependencies": {
-    "@c88/v8-coverage": "^0.1.0",
+    "@bcoe/v8-coverage": "^0.1.0",
     "find-up": "^3.0.0",
     "foreground-child": "^1.5.6",
-    "furi": "^1.0.0",
+    "furi": "^1.3.0",
     "istanbul-lib-coverage": "^2.0.1",
     "istanbul-lib-report": "^2.0.1",
     "istanbul-reports": "^2.0.0",
     "rimraf": "^2.6.2",
     "test-exclude": "^5.0.0",
     "uuid": "^3.3.2",
-    "v8-to-istanbul": "^2.0.0",
+    "v8-to-istanbul": "^2.0.1",
     "yargs": "^12.0.2",
     "yargs-parser": "^10.1.0"
   },
