chore: enable windows tests (#57)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: node_js
 os:
   - linux
   - osx
-  # need to figure out why offsets
-  # are slightly off on Windows.
-  # - windows
+  - windows
 node_js:
   - "11"
 after_success: npm run coverage
