--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git@github.com:bcoe/c8.git"
   },
   "scripts": {
-    "test": "node ./bin/c8.js --reporter=html --reporter=text mocha ./test/*.js",
+    "test": "node ./bin/c8.js --reporter=html --reporter=text mocha --timeout=4000 ./test/*.js",
     "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "posttest": "standard",
     "coverage": "./bin/c8.js report --reporter=text-lcov | coveralls",
@@ -42,7 +42,7 @@
     "rimraf": "^2.6.2",
     "test-exclude": "^5.0.0",
     "uuid": "^3.3.2",
-    "v8-to-istanbul": "^2.0.1",
+    "v8-to-istanbul": "^2.0.2",
     "yargs": "^12.0.2",
     "yargs-parser": "^10.1.0"
   },
