--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "node ./bin/c8.js --reporter=html --reporter=text mocha --timeout=4000 ./test/*.js",
     "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "posttest": "standard",
-    "coverage": "./bin/c8.js report --reporter=text-lcov | coveralls",
+    "coverage": "./bin/c8.js report --reporter=html --reporter=text-lcov | coveralls",
     "release": "standard-version"
   },
   "standard": {
@@ -42,17 +42,17 @@
     "rimraf": "^2.6.2",
     "test-exclude": "^5.0.0",
     "uuid": "^3.3.2",
-    "v8-to-istanbul": "^2.0.2",
+    "v8-to-istanbul": "^2.0.4",
     "yargs": "^13.1.0",
     "yargs-parser": "^10.1.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-jest-snapshot": "^2.0.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "mocha": "^5.2.0",
     "standard": "^12.0.1",
-    "standard-version": "^4.4.0"
+    "standard-version": "^5.0.2"
   },
   "engines": {
     "node": ">=10.12.0"
