--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "yargs-parser": "^10.1.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-jest-snapshot": "^2.0.0",
-    "coveralls": "^3.0.3",
-    "mocha": "^5.2.0",
-    "standard": "^12.0.1",
-    "standard-version": "^6.0.1"
+    "chai": "4.2.0",
+    "chai-jest-snapshot": "2.0.0",
+    "coveralls": "3.0.3",
+    "mocha": "5.2.0",
+    "standard": "12.0.1",
+    "standard-version": "6.0.1"
   },
   "engines": {
     "node": ">=10.12.0"
