--- a/package.json
+++ b/package.json
@@ -34,24 +34,24 @@
   "dependencies": {
     "@bcoe/v8-coverage": "^0.2.1",
     "find-up": "^4.0.0",
-    "foreground-child": "^1.5.6",
+    "foreground-child": "^2.0.0",
     "furi": "^1.3.0",
-    "istanbul-lib-coverage": "^2.0.1",
-    "istanbul-lib-report": "^2.0.1",
-    "istanbul-reports": "^2.2.4",
+    "istanbul-lib-coverage": "^2.0.5",
+    "istanbul-lib-report": "^2.0.8",
+    "istanbul-reports": "^2.2.6",
     "rimraf": "^3.0.0",
-    "test-exclude": "^5.0.0",
+    "test-exclude": "^5.2.3",
     "v8-to-istanbul": "^3.2.3",
     "yargs": "^14.0.0",
     "yargs-parser": "^13.0.0"
   },
   "devDependencies": {
-    "chai": "4.2.0",
-    "chai-jest-snapshot": "2.0.0",
-    "coveralls": "3.0.6",
-    "mocha": "6.2.0",
-    "standard": "12.0.1",
-    "standard-version": "7.0.0"
+    "chai": "^4.2.0",
+    "chai-jest-snapshot": "^2.0.0",
+    "coveralls": "^3.0.6",
+    "mocha": "^6.2.0",
+    "standard": "^14.1.0",
+    "standard-version": "^7.0.0"
   },
   "engines": {
     "node": ">=10.12.0"
