--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "find-up": "^4.0.0",
     "foreground-child": "^2.0.0",
     "furi": "^1.3.0",
-    "istanbul-lib-coverage": "^2.0.5",
-    "istanbul-lib-report": "^2.0.8",
-    "istanbul-reports": "^2.2.6",
+    "istanbul-lib-coverage": "^3.0.0-alpha.1",
+    "istanbul-lib-report": "^3.0.0-alpha.1",
+    "istanbul-reports": "^3.0.0-alpha.5",
     "rimraf": "^3.0.0",
     "test-exclude": "^5.2.3",
     "v8-to-istanbul": "^4.0.0",
