--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
   "license": "ISC",
   "dependencies": {
     "@bcoe/v8-coverage": "^0.2.3",
+    "@istanbuljs/schema": "^0.1.2",
     "find-up": "^4.0.0",
     "foreground-child": "^2.0.0",
     "furi": "^1.3.0",
-    "istanbul-lib-coverage": "^3.0.0-alpha.1",
-    "istanbul-lib-report": "^3.0.0-alpha.1",
-    "istanbul-reports": "^3.0.0-alpha.5",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.0.0",
     "rimraf": "^3.0.0",
-    "test-exclude": "^5.2.3",
-    "v8-to-istanbul": "^4.0.0",
+    "test-exclude": "^6.0.0",
+    "v8-to-istanbul": "^4.0.1",
     "yargs": "^15.0.0",
     "yargs-parser": "^16.0.0"
   },
@@ -51,7 +52,7 @@
     "mocha": "^6.2.0",
     "standard": "^14.1.0",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.4"
   },
   "engines": {
     "node": ">=10.12.0"
