--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git@github.com:bcoe/c8.git"
   },
   "scripts": {
-    "test": "node ./bin/c8.js --reporter=html --reporter=text mocha --timeout=8000 ./test/*.js",
+    "test": "node ./bin/c8.js mocha --timeout=8000 ./test/*.js",
     "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "fix": "standard --fix",
     "posttest": "standard",
