--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "url": "git@github.com:bcoe/c8.git"
   },
   "scripts": {
-    "test": "node ./bin/c8.js mocha --timeout=8000 ./test/*.js",
-    "coverage": "node ./bin/c8.js --check-coverage mocha --timeout=8000 ./test/*.js",
+    "test": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js mocha --timeout=8000 ./test/*.js",
+    "coverage": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js --check-coverage mocha --timeout=8000 ./test/*.js",
     "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "fix": "standard --fix",
     "posttest": "standard"
@@ -50,6 +50,7 @@
     "@types/node": "^16.9.1",
     "chai": "^4.2.0",
     "chai-jest-snapshot": "^2.0.0",
+    "cross-env": "^7.0.3",
     "mocha": "^9.0.0",
     "standard": "^16.0.3",
     "ts-node": "^10.0.0",
