--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js mocha --timeout=8000 ./test/*.js",
     "coverage": "cross-env TS_NODE_SKIP_PROJECT=true node ./bin/c8.js --check-coverage mocha --timeout=8000 ./test/*.js",
-    "test:snap": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
+    "test:snap": "cross-env CHAI_JEST_SNAPSHOT_UPDATE_ALL=true npm test",
     "fix": "standard --fix",
     "posttest": "standard"
   },
