chore(ci): disable release please on forks (#383)

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,6 +6,7 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    if: github.repository == 'bcoe/c8'
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v3
         id: release
